optimize images and commenting

--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@
 
 <body>
 
-    <header class="header">
+    <!-- header -->
+    <header class="header">]
+        <!-- navbar-header -->
         <div class="navbar-header">
 
+            <!-- title header -->
             <p class="title-header">Product Filter</p>
+            <!-- search input -->
             <input id="search-input" type="text" placeholder="Search Product">
+            <!-- filter items -->
             <div class="filter">
                 <button value="">All</button>
                 <button value="watch">Watch</button>
@@ -29,16 +34,13 @@
         </div>
     </header>
 
+    <!-- main -->
     <main class="main">
+        <!-- products container -->
         <section class="products">
-            <!-- <div class="product">
-                <div class="img-product"><img src="./images/1.jpg" alt=""></div>
-                <div class="product-information">
-                    <div class="price-product">$ <span>10.99</span></div>
-                    <div class="title-product">Watch Product</div>
-                </div>
-            </div> -->
+
         </section>
+
     </main>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./javascript/script.js"></script>
