chaneg api server

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <!-- header -->
-    <header class="header">]
+    <header class="header">
         <!-- navbar-header -->
         <div class="navbar-header">
 
@@ -25,10 +25,10 @@
             <!-- filter items -->
             <div class="filter">
                 <button value="">All</button>
-                <button value="watch">Watch</button>
-                <button value="shirt">Shirt</button>
-                <button value="gown">Gown</button>
-                <button value="jewelry">Jewelry</button>
+                <button value="men">men</button>
+                <button value="electronics">electronics</button>
+                <button value="women's clothing">women's clothing</button>
+                <button value="jewelery">jewelery</button>
             </div>
 
         </div>
